src/components/Project/style.scss
.tile { 
  flex-basis: 45%;
  padding: 10px;

  @media screen and (max-width: 700px) {
    flex-basis: auto;
  }

  transition: all 0.5s;

  &:hover {
    box-shadow: 3px 4px 26px 3px rgba(212, 212, 212, 0.925);
    transform: translateY(-10px);
    border-radius: 5px;
  }

  // &:hover {
  //   -webkit-animation: bounce 2s;
  //   animation: bounce 2s;
  // }
  // border: 1px solid #d3d3d3;
  // border-radius: 10px 10px 10px;
  // &:hover {
  //     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  // }
  // margin-bottom: 20px;
  // -webkit-transition: box-shadow 0.5s ease-out;
  // -moz-transition: box-shadow 0.5s ease-out;
  // -o-transition: box-shadow 0.5s ease-out;
  // -ms-transition: box-shadow 0.5s ease-out;
  // transition: box-shadow 0.5s ease-out;   


  img {
    width: 99%;
    text-align: center;
    max-height: auto;
    @media screen and (min-width: 900px) {
        max-height: 220px;
    }
    margin-bottom: 1rem;
    vertical-align: middle;
  }

  span.description {
    font-weight: 600;
  }
  span.tools {
    font-weight: 300;
  }

}

